- The standard libraries now are stdlib, ihram, elettrotecnica and pcb. Their elements will not be converted in primitives when the "split non standard symbols" option is active, UNLESS the "Strict compatibility with FidoCAD" mode is selected. 
- The "Strict compatibility with FidoCAD" mode is more reliable and the options about the "FidoCadJ extensions" have been eliminated.
- More precise selection of very close elements without "name" and "value" tags.
- Popup menu accessible with right click in the selection mode (cut, copy, paste, rotate, mirror request #3409656).
- Open a file is now faster and requires less memory.
- Added a Dutch translation of the user interface.
- Added the -l option to the command line interface.
- It is now easier to come back from an editing mode, to a macro that was previously selected.
- Selected objects appear in green, with different shades depending on their original color.

Version 0.24
------------

- Added the support for italic text lines
- The lenght of the segment being entered is expressed also in millimeters.
- Slight adjustment of the arrow style when they are associated to lines.
- Added the new "curve" primitive (cubic spline).
- Spanish translation of the user interface (thanks to Gohan "sbcne").
- Bug #3484904 corrected.
- Layer names are saved, if nonstandard.
- The grid pitch is saved (bug #3468917).
- More accurate automatic test scripts.
- All language resource files for the user interface are encoded in UTF-8.
- Chinese translation of the user interface, by Miles Qin "qhg007".
- The maximum number of points in a polygon and in a curve has been increased to 256
- The control point coordinates are no longer shown while changing characteristics of a graphic element.
- Bugs #3522962 and #3522951 corrected on the export towards vector formats.
- IHRaM library updated to v. 3.1.
- Wrong file encoding has been corrected in some libraries.
- Feature request #3526600 accepted and implemented.
- Corrected bug #3529024.